# devcontainer-multirepo-nvim-vscode

./: .gitignore  readme.md
.devcontainer/: docker-compose.yml
.devcontainer/project1-neovim/: devcontainer.json
.devcontainer/project1-vscode/: devcontainer.json
project1/: .pre-commit-config.yaml  README.md  pyproject.toml
project1/.devcontainer/: onCreateCommand.sh
project1/app/: main.py
project2/: .gitignore  README.md  poetry.toml  pyproject.toml  ruff.toml
project2/.devcontainer/: devcontainer.json  onCreateCommand.sh
project2/app/: main.py
